fix top bar text which is cut off

--- a/frontend/src/global_styles/common/header/app-menu.sass
+++ b/frontend/src/global_styles/common/header/app-menu.sass
@@ -18,7 +18,6 @@
 
   &--item-title
     min-width: 0
-    line-height: 1
     white-space: nowrap
 
   &--item-action
